# dependency-groups

./: .docs-requirements.txt  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: dependabot.yaml
.github/workflows/: build.yaml  canary.yaml  publish_to_pypi.yaml  readthedocs-pr-links.yaml
docs/: cli_usage.rst  conf.py  functional_interface.rst  index.rst  resolver.rst
requirements/: README.md  typing.txt
scripts/: bump-version.py  sync-precommit-config-version.py  sync-version.py
src/: dependency_groups.py
src/dependency_groups/: __init__.py  __main__.py  _implementation.py  _lint_dependency_groups.py  _pip_wrapper.py  _toml_compat.py
tests/: test_lint_cli.py  test_resolve.py  test_resolve_func.py  test_resolve_tree.py  test_resolver_class.py
